fix(engine): Final task environment null (#731)
* fix(engine): Set environment for finally actions

* refactor(): Delete environment from step definition engine api

* refactor(engine): Remove definition optional target from step constructor

* feat(engine): Add execution environment in report

* refactor(server): Delete executionId on domain core report

* review: codacy